--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ItemListActivity"
+            android:name=".CategoryListActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="landscape">
@@ -24,12 +24,12 @@
         <activity
             android:name=".ItemDetailActivity"
             android:label="@string/title_item_detail"
-            android:parentActivityName=".ItemListActivity"
+            android:parentActivityName=".CategoryListActivity"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="landscape">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="ru.karaokeplus.karaokeplus.ItemListActivity" />
+                android:value=".CategoryListActivity" />
         </activity>
         <provider   android:authorities="ru.karaokeplus.karaokeplus.contentprovider" android:enabled="true" android:exported="false"
             android:name="ru.karaokeplus.karaokeplus.content.provider.SongsContentProvider"
