--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,11 @@
         </activity>
         <activity
             android:name=".CategoryDetailActivity"
-            android:label="@string/title_item_detail"
+            android:label="@string/app_name"
             android:parentActivityName=".CategoryListActivity"
             android:theme="@style/AppTheme.NoActionBar">
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".CategoryListActivity" />
@@ -33,5 +35,4 @@
             android:name="ru.karaokeplus.karaokeplus.content.provider.SongsContentProvider"
             android:permission="ru.karaokeplus.karaokeplus.content.provider.permission.READ_WRITE_PROVIDER"/>
     </application>
-
 </manifest>
